appId: 'host.exp.exponent'

---

- tapOn:
    id: 'backButton'

- assertVisible: 'User'
- assertVisible: 'Password'